--- a/index.html
+++ b/index.html
@@ -30,7 +30,12 @@
                 </ul>
             </li>
             <li><a href="#">Research</a></li>
-            <li><a href="#">Student &amp; Staff Resources</a></li>
+            <li>
+                <a href="#">Student &amp; Staff Resources</a>
+                <ul class="sub-menu">
+                    <li><a href="#">Campus Moodle</a></li>
+                </ul>
+            </li>
             <li><a href="#">Talent Exchange</a></li>
             <li><a href="#">News</a></li>
 
