--- a/nav.html
+++ b/nav.html
@@ -4,7 +4,7 @@
     <title>
         RGU CSDM
     </title>
-    <link rel="stylesheet" type="text/css" href="main-style.css">
+    <link rel="stylesheet" type="text/css" href="nav-style.css">
 </head>
 <body>
 <header>
