--- a/Image Links.html
+++ b/Image Links.html
@@ -10,7 +10,7 @@
     <section>
         <p>
             An image as a link: <a href="###########">
-            <img border="2" alt="Courses" src="logo_w3s.gif" width="500" height="150">
+            <img border="2" alt="Courses" src="logo_w3.gif" width="500" height="150">
         </a>
         </p>
 
