--- a/nav.html
+++ b/nav.html
@@ -34,10 +34,21 @@
                 <a href="#">Student &amp; Staff Resources</a>
                 <ul class="sub-menu">
                     <li><a href="#">Campus Moodle</a></li>
+                    <li><a href="#">RGyoU</a></li>
+                    <li><a href="#">Timetables</a></li>
+                    <li><a href="#">Bookings</a></li>
+                    <li><a href="#">Software</a></li>
+                    <li><a href="#">Staff Resources</a></li>
                 </ul>
             </li>
             <li><a href="#">Talent Exchange</a></li>
-            <li><a href="#">News</a></li>
+            <li>
+                <a href="#">News</a>
+                <ul>
+                    <li><a href="#">News</a></li>
+                </ul>
+            </li>
+            <li><a href="#">Contact Us</a></li>
 
             <li>
                 <input type="text" name="search" placeholder="Search...">
