--- a/nav.html
+++ b/nav.html
@@ -44,7 +44,7 @@
             <li><a href="#">Talent Exchange</a></li>
             <li>
                 <a href="#">News</a>
-                <ul>
+                <ul class="sub-menu">
                     <li><a href="#">News</a></li>
                 </ul>
             </li>
