--- a/course-accordion.html
+++ b/course-accordion.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>RGU CSDM</title>
     <link rel="stylesheet" type="text/css" href="course-style.css">
-    <script src="accordion.js"></script>
+
 </head>
 <body>
 <section class="courses">
@@ -14,15 +14,23 @@
     </button>
     <section class="panel">
         <p>Computer Science...</p>
+        <section class="course-overview">
+            <p>Paragraph about the course...</p>
+        </section>
     </section>
 
     <button class="accordion">
         BSc Digital Media
     </button>
     <section class="panel">
-        Digital Media...
+        <p>Digital Media...</p>
+        <section class="course-overview">
+            <p>Paragraph about the course...</p>
+        </section>
     </section>
 
+
 </section>
+<script type="text/javascript" src="accordion.js"></script>
 </body>
 </html>
