Course Overview Accordion

--- a/course-accordion.html
+++ b/course-accordion.html
@@ -13,15 +13,19 @@
         BSc Computer Science
     </button>
     <section class="panel">
-        <p>Paragraph about the course...</p>
+        <section class="content";>
+            <p>Paragraph about the course...</p>
+        </section>
     </section>
 
     <button class="accordion">
         BSc Digital Media
     </button>
     <section class="panel">
-        <p>Digital Media...</p>
-        <p>Paragraph about the course...</p>
+        <section class="content">
+            <p>Digital Media...</p>
+            <p>Paragraph about the course...</p>
+        </section>
     </section>
 
 
