--- a/course-accordion.html
+++ b/course-accordion.html
@@ -10,20 +10,46 @@
 <section class="courses">
 
     <button class="accordion">
-        BSc Computer Science
+        BSc Computer Network Management &amp; Design
     </button>
     <section class="panel">
-        <section class="content";>
+        <section class="content">
             <p>Paragraph about the course...</p>
         </section>
     </section>
 
     <button class="accordion">
-        BSc Digital Media
+        BSc Computer Science
     </button>
     <section class="panel">
         <section class="content">
-            <p>Digital Media...</p>
+            <p>Paragraph about the course...</p>
+        </section>
+    </section>
+
+    <button class="accordion">
+        BSc Computing (Application Software Development)
+    </button>
+    <section class="panel">
+        <section class="content">
+            <p>Paragraph about the course...</p>
+        </section>
+    </section>
+
+    <button class="accordion">
+        BSc Cyber Security
+    </button>
+    <section class="panel">
+        <section class="content">
+            <p>Paragraph about the course...</p>
+        </section>
+    </section>
+
+    <button class="accordion">
+        BSc Digital Media - Deisgn, Production &amp; Development
+    </button>
+    <section class="panel">
+        <section class="content">
             <p>Paragraph about the course...</p>
         </section>
     </section>
