--- a/ImageLinks.html
+++ b/ImageLinks.html
@@ -7,42 +7,54 @@
 <body>
 
 <main>
-    <section>
-        <p>
-            An image as a link: <a href="###########">
-            <img border="2" alt="Courses" src="logo_w3.gif" width="500" height="150">
-        </a>
-        </p>
+    <section id = "Image-links">
+        <section id = "courses">
+            <p>
+                <a href="#">
+                    Courses
+                </a>
+            </p>
+        </section>
 
-        <p>
-            An image as a link: <a href="###########">
-            <img border="2" alt="News" src="logo_w3s.gif" width="200" height="50">
-        </a>
-        </p>
+        <section id = "news">
+            <p>
+                <a href="#">
+                    News
+                </a>
+            </p>
+        </section>
 
-        <p>
-            An image as a link: <a href="###########">
-            <img border="2" alt="Research" src="logo_w3s.gif" width="200" height="50">
-        </a>
-        </p>
+        <section id = "research">
+            <p>
+                <a href="#">
+                    Research
+                </a>
+            </p>
+        </section>
 
-        <p>
-            An image as a link: <a href="###########">
-            <img border="2" alt="Industrial Placements" src="logo_w3s.gif" width="150" height="500">
-        </a>
-        </p>
+        <section id = "industry">
+            <p>
+                <a href="#">
+                    Industrial Placements
+                </a>
+            </p>
+        </section>
 
-        <p>
-            An image as a link: <a href="###########">
-            <img border="2" alt="Staff and Students" src="logo_w3s.gif" width="500" height="150">
-        </a>
-        </p>
+        <section id = "staffstudents">
+            <p>
+                <a href="#">
+                    Staff and Students
+                </a>
+            </p>
+        </section>
 
-        <p>
-            An image as a link: <a href="###########">
-            <img border="2" alt="About us" src="logo_w3s.gif" width="200" height="50">
-        </a>
-        </p>
+        <section id = "about">
+            <p>
+                <a href="#">
+                    About us
+                </a>
+            </p>
+        </section>
 
     </section>
 </main>
