updated version of header with logo, banner and nav bar

--- a/header.html
+++ b/header.html
@@ -10,7 +10,10 @@
 <body>
 
 <header>
-    <center><img src="14067538_294874570868754_4594162082847031199_n.jpg" alt="RGU Header" align="center" style="width:70%;height:250px;"></center>
+
+    <center><img src="SIWBBanner.jpg" alt="RGU Header" align="center" style= "width:60%; height:200px; position: relative;"></center>
+    <center><img src="thumbnail_rgulogo.png" alt="RGU Header" align="center" style= "width:15%; height:75px; position: absolute; left: 389px; top: 97px;"></center>
+    <center><img src="thumbnail_schooltitle.png" alt="RGU Header" align="center" style= "width:auto; height:35px; position: absolute; left: 389px; top: 172px;"></center>
 
     <nav>
         <ul class="menu">
