start of tabs for twitter and news feed

--- a/header.html
+++ b/header.html
@@ -5,15 +5,16 @@
     <meta charset="UTF-8">
     <title>Robert Gordon University Computing Science and Digital Media</title>
     <link rel="stylesheet" type="text/css" href="nav-style.css">
+    <link rel="stylesheet" type="text/css" href="header.css">
 </head>
 
 <body>
 
 <header>
 
-    <center><img src="SIWBBanner.jpg" alt="RGU Header" align="center" style= "width:60%; height:200px; position: relative;"></center>
-    <center><img src="thumbnail_rgulogo.png" alt="RGU Header" align="center" style= "width:15%; height:75px; position: absolute; left: 389px; top: 97px;"></center>
-    <center><img src="thumbnail_schooltitle.png" alt="RGU Header" align="center" style= "width:auto; height:35px; position: absolute; left: 389px; top: 172px;"></center>
+    <center><img src="SIWBBanner.jpg" alt="RGU Header" align="center" class= "banner"/></center>
+    <center><img src="thumbnail_rgulogo.png" alt="RGU Header" align="center" class= "rguLogo"></center>
+    <center><img src="thumbnail_schooltitle.png" alt="RGU Header" align="center" class= "schoolTitle"></center>
 
     <nav>
         <ul class="menu">
@@ -57,6 +58,8 @@
 </header>
 
 <main>
+
+    
 
 </main>
 
