start of tabs for twitter and news feed

--- a/header.html
+++ b/header.html
@@ -6,6 +6,7 @@
     <title>Robert Gordon University Computing Science and Digital Media</title>
     <link rel="stylesheet" type="text/css" href="nav-style.css">
     <link rel="stylesheet" type="text/css" href="header.css">
+    <link rel="stylesheet" type="text/css" href="twitterAndNewsTab.css">
 </head>
 
 <body>
@@ -58,8 +59,6 @@
 </header>
 
 <main>
-
-    
 
 </main>
 
