Course Overview Accordion 17/11/2016 - Edit: Course Video Modal Added

--- a/courses-undergrad.html
+++ b/courses-undergrad.html
@@ -36,6 +36,8 @@
                 <p><strong>Advanced Entry</strong><br/>Applications for advanced entry are considered on an individual basis.</p>
             </section>
 
+            <a class="rgu-link" href="http://www.rgu.ac.uk/computing/study-options/undergraduate/computer-network-management-and-design">For more information please visit the Robert Gordon Univeristy website.</a>
+
 
 
         </section>
