--- a/ImageLinks.html
+++ b/ImageLinks.html
@@ -3,58 +3,60 @@
 <head>
     <meta charset="UTF-8">
     <title>Image Links</title>
+    <link rel="stylesheet" type="text/css" href="linkstyle.css">
 </head>
 <body>
 
 <main>
-    <section id = "Image-links">
-        <section id = "courses">
-            <p>
-                <a href="#">
+    <section id = "image-links">
+
+        <a title="courses" href="#">
+            <section id="courses">
+                <h2>
                     Courses
-                </a>
-            </p>
-        </section>
+                </h2>
+            </section>
+        </a>
 
-        <section id = "news">
-            <p>
-                <a href="#">
+        <a title="news" href="#">
+            <section id="news">
+                <h2>
                     News
-                </a>
-            </p>
-        </section>
+                </h2>
+            </section>
+        </a>
 
-        <section id = "research">
-            <p>
-                <a href="#">
+        <a title="research" href="#">
+            <section id="research">
+                <h2>
                     Research
-                </a>
-            </p>
-        </section>
+                </h2>
+            </section>
+        </a>
 
-        <section id = "industry">
-            <p>
-                <a href="#">
+        <a title="industry" href="#">
+            <div id="industry">
+                <h2>
                     Industrial Placements
-                </a>
-            </p>
-        </section>
+                </h2>
+            </div>
+        </a>
 
-        <section id = "staffstudents">
-            <p>
-                <a href="#">
+        <a title="staffstudents" href="#">
+            <div id="staffstudents">
+                <h2>
                     Staff and Students
-                </a>
-            </p>
-        </section>
+                </h2>
+            </div>
+        </a>
 
-        <section id = "about">
-            <p>
-                <a href="#">
-                    About us
-                </a>
-            </p>
-        </section>
+        <a title="about" href="#">
+            <div id="about">
+                <h2>
+                    About
+                </h2>
+            </div>
+        </a>
 
     </section>
 </main>
