--- a/ImageLinks.html
+++ b/ImageLinks.html
@@ -10,8 +10,9 @@
 <main>
     <section id = "image-links">
 
+
         <a title="courses" href="#">
-            <section id="courses">
+            <section id="courses" class="images">
                 <h2>
                     Courses
                 </h2>
@@ -19,7 +20,7 @@
         </a>
 
         <a title="news" href="#">
-            <section id="news">
+            <section id="news" class="images">
                 <h2>
                     News
                 </h2>
@@ -27,7 +28,7 @@
         </a>
 
         <a title="research" href="#">
-            <section id="research">
+            <section id="research" class="images">
                 <h2>
                     Research
                 </h2>
@@ -35,7 +36,7 @@
         </a>
 
         <a title="industry" href="#">
-            <div id="industry">
+            <div id="industry" class="images">
                 <h2>
                     Industrial Placements
                 </h2>
@@ -43,7 +44,7 @@
         </a>
 
         <a title="staffstudents" href="#">
-            <div id="staffstudents">
+            <div id="staffstudents" class="images">
                 <h2>
                     Staff and Students
                 </h2>
@@ -51,7 +52,7 @@
         </a>
 
         <a title="about" href="#">
-            <div id="about">
+            <div id="about" class="images">
                 <h2>
                     About
                 </h2>
