Course Overview Accordion 17/11/2016 - Edit: Course Video Modal Added

--- a/courses-undergrad.html
+++ b/courses-undergrad.html
@@ -23,9 +23,16 @@
                 <p class="info">This course aims to equip students to work as professional engineers and consultants in the design, configuration and management of computer networks.<br/><br/>The course format has been designed to meet the requirements of applicants who already possess an appropriate HND, by providing a two-year top-up programme leading to an honours degree.</p>
 
 
+                <a href="javascript:void(0)" onclick="openModal('modal-network');"><img id="img-network" class="video-link" src="images/network-video.jpg" alt="Link to course video"></a>
 
-                <img id="myBtn" class="video-link" src="images/network-video.jpg" alt="Link to network course video">
+                <div id="modal-network" class="modal">
 
+                    <div class="modal-content" id="modal-content">
+                        <span class="close">x</span>
+                        <iframe id="test-video" class="course-video" width="615" height="435" src="https://www.youtube.com/embed/WHWUv8Rfss8" frameborder="0" allowfullscreen></iframe>
+                    </div>
+
+                </div>
 
             </section>
 
@@ -36,26 +43,50 @@
                 <p><strong>Advanced Entry</strong><br/>Applications for advanced entry are considered on an individual basis.</p>
             </section>
 
-            <a class="rgu-link" href="http://www.rgu.ac.uk/computing/study-options/undergraduate/computer-network-management-and-design">For more information please visit the Robert Gordon Univeristy website.</a>
+            <a class="rgu-link" href="http://www.rgu.ac.uk/computing/study-options/undergraduate/computer-network-management-and-design">For more information please visit the Robert Gordon University website.</a>
 
 
 
         </section>
     </section>
-    <div id="myModal" class="modal">
 
-        <div class="modal-content" id="modal-content">
-            <span class="close">x</span>
-            <iframe id="test-video" class="course-video" width="615" height="435" src="https://www.youtube.com/embed/WHWUv8Rfss8" frameborder="0" allowfullscreen></iframe>
-        </div>
-
-    </div>
     <button class="accordion">
         BSc Computer Science
     </button>
     <section class="panel">
         <section class="content">
-            <p>Paragraph about the course...</p>
+            <section class="quick-view">
+                <p>Award: BSc (Hons)</p>
+                <p>Course Length: 4 or 5 years</p>
+                <p>Mode of Study: Full-time</p>
+            </section>
+
+            <section class="overview">
+                <p class="info">Our Computer Science degree provides you with a balance of knowledge and skills to design and implement software systems to the high professional standards demanded by industry.<br/><br/>In this course, you will study object-orientated softwre design, learn system development skills and how to apply them in practice. The course is designe to equip you for a career at the cutting edge of developments in software and information technologies.</p>
+
+
+                <a href="javascript:void(0)" onclick="openModal('modal-cs');"><img id="img-cs" class="video-link" src="images/cs-video.jpg" alt="Link to course video"></a>
+
+                <div id="modal-cs" class="modal">
+
+                    <div class="modal-content" id="modal-content">
+                        <span class="close">x</span>
+                        <iframe id=test-video" class="course-video" width="615" height="435" src="https://www.youtube.com/embed/llKP-TdsgUw" frameborder="0" allowfullscreen></iframe>
+                    </div>
+
+                </div>
+
+            </section>
+
+
+
+            <section class="requirements">
+                <p><strong>Entry Requirements</strong><br/>A relevant HND from one of our partner colleges.</p>
+                <p><strong>Advanced Entry</strong><br/>Applications for advanced entry are considered on an individual basis.</p>
+            </section>
+
+            <a class="rgu-link" href="http://www.rgu.ac.uk/computing/study-options/undergraduate/computer-science-bsc-hons">For more information please visit the Robert Gordon University website.</a>
+
         </section>
     </section>
 
@@ -64,7 +95,37 @@
     </button>
     <section class="panel">
         <section class="content">
-            <p>Paragraph about the course...</p>
+            <section class="quick-view">
+                <p>Award:</p>
+                <p>Course Length:</p>
+                <p>Mode of Study:</p>
+            </section>
+
+            <section class="overview">
+                <p class="info"><!--First Paragraph--><br/><br/><!--Second Paragraph--></p>
+
+
+                <a href="javascript:void(0)" onclick="openModal('modal-#');"><img id="img-#" class="video-link" src="images/#-video.jpg" alt="Link to course video"></a>
+
+                <div id="modal-#" class="modal">
+
+                    <div class="modal-content" id="modal-content">
+                        <span class="close">x</span>
+                        <iframe id=test-video" class="course-video" width="615" height="435" src="#embeded-video#" frameborder="0" allowfullscreen></iframe>
+                    </div>
+
+                </div>
+
+            </section>
+
+
+
+            <section class="requirements">
+                <p><strong>Entry Requirements</strong><br/><!--Grades--></p>
+                <p><strong>Advanced Entry</strong><br/><!--If Applicable--></p>
+            </section>
+
+            <a class="rgu-link" href="#">For more information please visit the Robert Gordon University website.</a>
         </section>
     </section>
 
@@ -78,7 +139,7 @@
     </section>
 
     <button class="accordion">
-        BSc Digital Media - Deisgn, Production &amp; Development
+        BSc Digital Media - Design, Production &amp; Development
     </button>
     <section class="panel">
         <section class="content">
@@ -89,6 +150,6 @@
 
 </section>
 <script type="text/javascript" src="accordion.js"></script>
-<script type="text/javascript" src="modal-video.js"></script>
+<script type="text/javascript" src="modal-function.js"></script>
 </body>
 </html>
