--- a/ImageLinks.html
+++ b/ImageLinks.html
@@ -10,54 +10,66 @@
 <main>
     <section id = "image-links">
 
+        <section id="four">
 
-        <a title="courses" href="#">
-            <section id="courses" class="images">
-                <h2>
-                    Courses
-                </h2>
+            <a title="courses" href="#">
+                <section id="courses" class="images">
+                    <h2>
+                        Courses
+                    </h2>
+                </section>
+            </a>
+
+            <section id="news-res">
+
+                <a title="news" href="#">
+                    <section id="news" class="images">
+                        <h2>
+                            News
+                        </h2>
+                    </section>
+                </a>
+
+                <a title="research" href="#">
+                    <section id="research" class="images">
+                        <h2>
+                            Research
+                        </h2>
+                    </section>
+                </a>
+
             </section>
-        </a>
 
-        <a title="news" href="#">
-            <section id="news" class="images">
-                <h2>
-                    News
-                </h2>
-            </section>
-        </a>
 
-        <a title="research" href="#">
-            <section id="research" class="images">
-                <h2>
-                    Research
-                </h2>
-            </section>
-        </a>
+            <a title="staffstudents" href="#">
+                <div id="staffstudents" class="images">
+                    <h2>
+                        Staff and Students
+                    </h2>
+                </div>
+            </a>
 
-        <a title="industry" href="#">
-            <div id="industry" class="images">
-                <h2>
-                    Industrial Placements
-                </h2>
-            </div>
-        </a>
+        </section>
 
-        <a title="staffstudents" href="#">
-            <div id="staffstudents" class="images">
-                <h2>
-                    Staff and Students
-                </h2>
-            </div>
-        </a>
+        <section id="two">
 
-        <a title="about" href="#">
-            <div id="about" class="images">
-                <h2>
-                    About
-                </h2>
-            </div>
-        </a>
+            <a title="industry" href="#">
+                <div id="industry" class="images">
+                    <h2>
+                        Placements
+                    </h2>
+                </div>
+            </a>
+
+            <a title="about" href="#">
+                <div id="about" class="images">
+                    <h2>
+                        About us
+                    </h2>
+                </div>
+            </a>
+
+        </section>
 
     </section>
 </main>
