Course Overview Accordion 17/11/2016 - Edit: Course Video Modal Added

--- a/courses-template.html
+++ b/courses-template.html
@@ -25,9 +25,9 @@
 
             <div id="modal-#" class="modal">
 
-                <div class="modal-content" id="modal-content">
+                <div class="modal-content">
                     <span class="close">x</span>
-                    <iframe id=test-video" class="course-video" width="615" height="435" src="#embeded-video#" frameborder="0" allowfullscreen></iframe>
+                    <iframe class="course-video" width="615" height="435" src="#embeded-video#" frameborder="0" allowfullscreen></iframe>
                 </div>
 
             </div>
