--- a/courses-undergrad.html
+++ b/courses-undergrad.html
@@ -6,7 +6,15 @@
     <link rel="stylesheet" type="text/css" href="course-style.css">
 </head>
 <body>
-<section class="courses">
+<header>
+    <!-- Header -->
+    <nav>
+        <!-- Naviagtion -->
+    </nav>
+</header>
+<main>
+    <!-- Main Content -->
+    <section class="courses">
 
     <button class="accordion">
         BSc Computer Network Management &amp; Design
@@ -27,9 +35,9 @@
 
                 <div id="modal-network" class="modal">
 
-                    <div class="modal-content" id="modal-content">
+                    <div class="modal-content">
                         <span class="close">x</span>
-                        <iframe id="test-video" class="course-video" width="615" height="435" src="https://www.youtube.com/embed/WHWUv8Rfss8" frameborder="0" allowfullscreen></iframe>
+                        <iframe  class="course-video" width="615" height="435" src="https://www.youtube.com/embed/WHWUv8Rfss8" frameborder="0" allowfullscreen></iframe>
                     </div>
 
                 </div>
@@ -69,9 +77,9 @@
 
                 <div id="modal-cs" class="modal">
 
-                    <div class="modal-content" id="modal-content">
+                    <div class="modal-content">
                         <span class="close">x</span>
-                        <iframe id=test-video" class="course-video" width="615" height="435" src="https://www.youtube.com/embed/llKP-TdsgUw" frameborder="0" allowfullscreen></iframe>
+                        <iframe class="course-video" width="615" height="435" src="https://www.youtube.com/embed/llKP-TdsgUw" frameborder="0" allowfullscreen></iframe>
                     </div>
 
                 </div>
@@ -81,7 +89,7 @@
 
 
             <section class="requirements">
-                <p><strong>Entry Requirements</strong><br/>A relevant HND from one of our partner colleges.</p>
+                <p><strong>Entry Requirements</strong><br/>Scottish Higher: BBBC<br/>GSC A Level: BCC<br/>IB: 27</p>
                 <p><strong>Advanced Entry</strong><br/>Applications for advanced entry are considered on an individual basis.</p>
             </section>
 
@@ -109,9 +117,9 @@
 
                 <div id="modal-#" class="modal">
 
-                    <div class="modal-content" id="modal-content">
+                    <div class="modal-content">
                         <span class="close">x</span>
-                        <iframe id=test-video" class="course-video" width="615" height="435" src="#embeded-video#" frameborder="0" allowfullscreen></iframe>
+                        <iframe class="course-video" width="615" height="435" src="#embeded-video#" frameborder="0" allowfullscreen></iframe>
                     </div>
 
                 </div>
@@ -121,7 +129,7 @@
 
 
             <section class="requirements">
-                <p><strong>Entry Requirements</strong><br/><!--Grades--></p>
+                <p><strong>Entry Requirements</strong><br/><!--grade--></p>
                 <p><strong>Advanced Entry</strong><br/><!--If Applicable--></p>
             </section>
 
@@ -149,7 +157,24 @@
 
 
 </section>
+
+    <section class="study-contact">
+        <p><strong>Undergraduate Enquiries</strong></p>
+        <p>School Office<br/>School of Computing Science and Digital Media<br/>The Robert Gordon University</p>
+    </section>
+
+</main>
+
+<aside>
+    <!-- Sidebar -->
+</aside>
+
+<footer>
+    <!-- Footer -->
+</footer>
+
 <script type="text/javascript" src="accordion.js"></script>
 <script type="text/javascript" src="modal-function.js"></script>
+
 </body>
 </html>
