--- a/ImageLinks.html
+++ b/ImageLinks.html
@@ -31,7 +31,7 @@
                 </a>
 
                 <a title="research" href="#">
-                    <section id="research" class="images">
+                    <section id="research" class="images2">
                         <h2>
                             Research
                         </h2>
@@ -54,7 +54,7 @@
         <section id="two">
 
             <a title="industry" href="#">
-                <div id="industry" class="images">
+                <div id="industry" class="images2">
                     <h2>
                         Placements
                     </h2>
@@ -62,7 +62,7 @@
             </a>
 
             <a title="about" href="#">
-                <div id="about" class="images">
+                <div id="about" class="images2">
                     <h2>
                         About us
                     </h2>
@@ -71,6 +71,12 @@
 
         </section>
 
+    </section>
+
+    <section class="grid-container">
+        <div class="grid-66">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d8664.362078406428!2d-2.1410221!3d57.1184161!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x5d8969688e77366a!2sRobert+Gordon+University+Aberdeen%2C+Garthdee+Campus!5e0!3m2!1sen!2suk!4v1479890592261" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+        </div>
     </section>
 </main>
 
