--- a/placement_main.html
+++ b/placement_main.html
@@ -2,9 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Placement main</title>
 </head>
 <body>
-
+ <main>
+     <header>Industrial placement</header>
+ </main>
 </body>
 </html>
