--- a/placement_main.html
+++ b/placement_main.html
@@ -3,10 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Placement main</title>
+    <link type="text/css" rel="stylesheet" href="assets/css/placement-style.css">
 </head>
 <body>
  <main>
-     <header>Industrial placement</header>
+     <h1 id = "placement-title"> Industrial Placements</h1>
+     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam tempus maximus est, eget finibus est. Sed pretium et quam at lacinia. Cras auctor aliquam lacus sed faucibus. Morbi volutpat tincidunt velit at viverra. Sed consequat magna libero, non lobortis leo efficitur et. Maecenas id tellus vitae orci commodo molestie. Phasellus vitae bibendum lorem, a rhoncus dolor. Nullam accumsan viverra tortor. Proin fringilla lorem arcu, id bibendum enim ornare id. Ut ullamcorper libero eget maximus consectetur. Vivamus ac nisi at ex vehicula venenatis non ut lectus. Praesent tristique tortor a sodales feugiat. Duis eu dictum quam. Sed eu tortor hendrerit, laoreet eros eu, ultricies nulla. Vivamus varius consectetur elit, eu porta velit cursus id. Proin cursus pellentesque metus porta rutrum.</p>
  </main>
 </body>
 </html>
