--- a/ImageLinks.html
+++ b/ImageLinks.html
@@ -74,8 +74,7 @@
     </section>
 
     <section class="grid-container">
-        <div class="grid-66">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d8664.362078406428!2d-2.1410221!3d57.1184161!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x5d8969688e77366a!2sRobert+Gordon+University+Aberdeen%2C+Garthdee+Campus!5e0!3m2!1sen!2suk!4v1479890592261" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d8664.362078406428!2d-2.1410221!3d57.1184161!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x5d8969688e77366a!2sRobert+Gordon+University+Aberdeen%2C+Garthdee+Campus!5e0!3m2!1sen!2suk!4v1479890592261" width="300" height="225" frameborder="0" allowfullscreen></iframe>
         </div>
     </section>
 </main>
