--- a/HomePage.html
+++ b/HomePage.html
@@ -73,8 +73,25 @@
 
     </section>
 
-    <section class="grid-container">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d8664.362078406428!2d-2.1410221!3d57.1184161!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x5d8969688e77366a!2sRobert+Gordon+University+Aberdeen%2C+Garthdee+Campus!5e0!3m2!1sen!2suk!4v1479890592261" width="300" height="225" frameborder="0" allowfullscreen></iframe>
+    <section id="contact">
+        <h3>
+            Contact Us
+        </h3>
+        <p>
+            Sir Ian Wood Building <br/>
+            Robert Gordon University <br/>
+            Garthdee Road <br/>
+            Aberdeen <br/>
+            AB10 7GJ <br/>
+            <br/>
+            Email: csdm-office@rgu.ac.uk <br/>
+            <br/>
+            Tel: 44-(0)1224 262700
+        </p>
+    </section>
+
+    <section class="google-map">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d8664.362078406428!2d-2.1410221!3d57.1184161!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x5d8969688e77366a!2sRobert+Gordon+University+Aberdeen%2C+Garthdee+Campus!5e0!3m2!1sen!2suk!4v1479890592261" width="360" height="270" frameborder="0" allowfullscreen></iframe>
         </div>
     </section>
 </main>
