--- a/HomePage.html
+++ b/HomePage.html
@@ -14,7 +14,7 @@
 
             <a title="courses" href="#">
                 <section id="courses" class="images">
-                    <h2>
+                    <h2 class="linktitle">
                         Courses
                     </h2>
                 </section>
@@ -24,7 +24,7 @@
 
                 <a title="news" href="#">
                     <section id="news" class="images">
-                        <h2>
+                        <h2 class="linktitle">
                             News
                         </h2>
                     </section>
@@ -32,7 +32,7 @@
 
                 <a title="research" href="#">
                     <section id="research" class="images2">
-                        <h2>
+                        <h2 class="linktitle">
                             Research
                         </h2>
                     </section>
@@ -43,7 +43,7 @@
 
             <a title="staffstudents" href="#">
                 <div id="staffstudents" class="images">
-                    <h2>
+                    <h2 class="linktitle">
                         Staff and Students
                     </h2>
                 </div>
@@ -55,7 +55,7 @@
 
             <a title="industry" href="#">
                 <div id="industry" class="images2">
-                    <h2>
+                    <h2 class="linktitle">
                         Placements
                     </h2>
                 </div>
@@ -63,7 +63,7 @@
 
             <a title="about" href="#">
                 <div id="about" class="images2">
-                    <h2>
+                    <h2 class="linktitle">
                         About us
                     </h2>
                 </div>
@@ -74,7 +74,7 @@
     </section>
 
     <section id="contact">
-        <h3>
+        <h3 id="contacttitle">
             Contact Us
         </h3>
         <p>
