--- a/placement_main.html
+++ b/placement_main.html
@@ -8,7 +8,25 @@
 <body>
  <main>
      <h1 id = "placement-title"> Industrial Placements</h1>
-     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam tempus maximus est, eget finibus est. Sed pretium et quam at lacinia. Cras auctor aliquam lacus sed faucibus. Morbi volutpat tincidunt velit at viverra. Sed consequat magna libero, non lobortis leo efficitur et. Maecenas id tellus vitae orci commodo molestie. Phasellus vitae bibendum lorem, a rhoncus dolor. Nullam accumsan viverra tortor. Proin fringilla lorem arcu, id bibendum enim ornare id. Ut ullamcorper libero eget maximus consectetur. Vivamus ac nisi at ex vehicula venenatis non ut lectus. Praesent tristique tortor a sodales feugiat. Duis eu dictum quam. Sed eu tortor hendrerit, laoreet eros eu, ultricies nulla. Vivamus varius consectetur elit, eu porta velit cursus id. Proin cursus pellentesque metus porta rutrum.</p>
+     <p>The aim of the industrial placement is to provide students with the opportunity to consolidate and broaden the knowledge they have gained in their studies. The working environment allows students to apply their academic knowledge and skills to a real world situation. By undertaking a placement during your studies, you will make valuable links with industry and have a definite advantage when you apply for graduate jobs. Placements allow students to use the skills they have developed while studying and build on them in a real world situation. The benefits for both employers and students are huge; students learn from working alongside professionals and employers benefit from a valuable resource with valuable skills, knowledge and fresh ideas. </p>
+     <div class="w3-content" style="max-width:800px">
+         <video width="420" height="300" class="mySlides" controls>
+             <source src="assets/images%20and%20videos/RGU%20Campus%20-%20Aerial%20View.mp4" type="video/mp4">
+         </video>
+         <video width="420" height="300" class="mySlides" controls>
+             <source src="assets/images%20and%20videos/Welcome%20to%20RGU.mp4" type="video/mp4">
+         </video>
+         <video width="420" height="300" class="mySlides" controls>
+             <source src="assets/images%20and%20videos/Talent%20Exchange%20-%20LR%20Senergy.mp4" type="video/mp4">
+         </video>
+         <a class="w3-btn-floating w3-display-left" onclick="plusDivs(-1)">&#10094;</a>
+         <a class="w3-btn-floating w3-display-right" onclick="plusDivs(+1)">&#10095;</a>
+     </div>
+     <img id="graph" height="300" width="450" src="assets/images%20and%20videos/meta-chart.png">
+     <h3>Where are we?</h3>
+     <p>The Placement Office for the Faculty of Design and Technology organises relevant opportunities for students who undertake a placement as part of the academic requirements of their course. We are located in Garthdee, in the small building next to Scott Sutherland School.</p>
+     <p>The Office is open Monday to Thursday 09.00-17.00 and Friday 09.00-16.00. You can contact us by dropping in to the Office or by email to placement.destech@rgu.ac.uk or by phoning 01224 262344/ 262335/ 262433.</p>
  </main>
+  <script src="slideshow.js" type="text/javascript"></script>
 </body>
 </html>
