--- a/HomePage.html
+++ b/HomePage.html
@@ -9,6 +9,11 @@
 
 <main>
     <section id = "image-links">
+        <section id="aboutschool">
+            <h3>
+                About the School
+            </h3>
+        </section>
 
         <section id="four">
 
