Complete Navigation (Non-Responsive)

--- a/header.html
+++ b/header.html
@@ -13,7 +13,7 @@
 
 <header>
 
-    <center><img src="SIWBBanner.jpg" alt="RGU Header" align="center" class= "banner"/></center>
+    <center><img src="rgu-banner.jpg" alt="RGU Header" align="center" class= "banner"/></center>
     <center><img src="thumbnail_rgulogo.png" alt="RGU Header" align="center" class= "rguLogo"></center>
     <center><img src="thumbnail_schooltitle.png" alt="RGU Header" align="center" class= "schoolTitle"></center>
 
