--- a/HomePage.html
+++ b/HomePage.html
@@ -13,6 +13,7 @@
             <h3>
                 About the School
             </h3>
+            <p id="abouttext">The School of Computing Science and Digital Media - Robert Gordon University in Aberdeen, Scotland has an excellent reputation for it's innovative and practical approaches to teaching and learning. This site contains news, events, staff and student links, research, contact information and much more.</p>
         </section>
 
         <section id="four">
