--- a/nav.html
+++ b/nav.html
@@ -16,21 +16,23 @@
 
     </section>
 
-    <nav id="nav">
+    <nav id="navigation">
         <div id="home">
             <a href="index.html" id="home-link"><img src="home-icon.png" alt="home link" height="20" width="20"></a>
         </div>
         <ul class="menu">
-            <li class="menu-content">
-                <a href="#">About Us</a>
+            <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+
+            <li>
+                <a href="#" class="menu-content">About Us</a>
                 <ul class="sub-menu">
                     <li><a href="#">Staff</a></li>
                     <li><a href="#">Privacy</a></li>
                     <li><a href="#">Health &amp; Safety</a></li>
                 </ul>
             </li>
-            <li class="menu-content">
-                <a href="#">Our Courses</a>
+            <li>
+                <a href="#" class="menu-content">Our Courses</a>
                 <ul class="sub-menu">
                     <li><a href="#">Undergraduate</a></li>
                     <li><a href="#">Postgraduate</a></li>
@@ -40,11 +42,11 @@
                     <li><a href="#">Distance Learning</a></li>
                 </ul>
             </li>
-            <li class="menu-content">
-                <a href="#">Research</a>
+            <li>
+                <a href="#" class="menu-content">Research</a>
             </li>
-            <li class="menu-content">
-                <a href="#">Student &amp; Staff Resources</a>
+            <li>
+                <a href="#" class="menu-content">Student &amp; Staff Resources</a>
                 <ul class="sub-menu">
                     <li><a href="#">Campus Moodle</a></li>
                     <li><a href="#">RGyoU</a></li>
@@ -54,35 +56,29 @@
                     <li><a href="#">Staff Resources</a></li>
                 </ul>
             </li>
-            <li class="menu-content">
-                <a href="#">Talent Exchange</a>
-            </li>
-            <li class="menu-content">
-                <a href="#">News</a>
-            </li>
-            <li class="menu-content">
-                <a href="#">Contact Us</a>
-            </li>
-<!--
             <li>
-                <img src="searchicon.png" id="searchicon">
+                <a href="#" class="menu-content">Talent Exchange</a>
             </li>
--->
-
-
-
-
+            <li>
+                <a href="#" class="menu-content">News</a>
+            </li>
+            <li>
+                <a href="#" class="menu-content">Contact Us</a>
+            </li>
 
         </ul>
         <div id="search-box">
             <input type="text" name="search" placeholder="Search..." onfocus="hideNav()" onblur="showNav()">
             <button id="search-btn">Go</button>
         </div>
+
+        <!--<span class="open-nav" onclick="openNav()">&#9776;open</span>-->
         </nav>
 </header>
 <section>
-
+    <span class="open-nav" onclick="openNav()">&#9776;open</span>
 </section>
-<script type="text/javascript" src="hide-nav.js"></script>
+<script type="text/javascript" src="vertical-nav.js"></script>
+
 </body>
 </html>
