--- a/nav.html
+++ b/nav.html
@@ -16,12 +16,12 @@
 
     </section>
 
-    <nav id="navigation">
-        <div id="home">
-            <a href="index.html" id="home-link"><img src="home-icon.png" alt="home link" height="20" width="20"></a>
+    <nav id="nav">
+        <div id="home" class="icon">
+            <a href="index.html" id="home-link"><img id="home-icon" src="home-icon.png" alt="home link" height="20" width="20"></a>
         </div>
-        <ul class="menu">
-            <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+        <ul class="menu" id="navigation">
+            <span href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</span>
 
             <li>
                 <a href="#" class="menu-content">About Us</a>
@@ -67,16 +67,19 @@
             </li>
 
         </ul>
-        <div id="search-box">
+
+        <div id="search-box" class="icon">
             <input type="text" name="search" placeholder="Search..." onfocus="hideNav()" onblur="showNav()">
             <button id="search-btn">Go</button>
         </div>
 
+        <span id="open-nav" class="icon" onclick="openNav()">&#9776;</span>
+
         <!--<span class="open-nav" onclick="openNav()">&#9776;open</span>-->
-        </nav>
+    </nav>
 </header>
 <section>
-    <span class="open-nav" onclick="openNav()">&#9776;open</span>
+    <!--<span id="open-nav"  onclick="openNav()">&#9776;open</span>-->
 </section>
 <script type="text/javascript" src="vertical-nav.js"></script>
 
